# SCANUE-V

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agents.py  aisettings.py  babel.config.js  config.py  create_scanue_v_text.py  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  graph.py  justfile  main.py  openai_wrapper.py  package-lock.json  package.json  tools.py  utils.py
.github/: dependabot.yml
.github/workflows/: testing.yml
app/login/: page.tsx
backend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  exceptions.py  main.py  types.py
backend/app/agents/: agents.py  base.py  workflow.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: chat.py  health.py  login.py  scan.py  users.py
backend/app/core/: cache.py  config.py  db.py  security.py  utils.py
backend/app/migrations/: 0001_initial_setup.sql
backend/app/models/: agents.py  message.py  scan.py  token.py  users.py
backend/app/scan/: graph.py  openai.py  pfc_agents.py
backend/app/services/: db_services.py  user_services.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  utils.py
backend/tests/api/routes/: test_health_route.py  test_login_routes.py  test_user_routes.py
backend/tests/core/: test_config.py  test_security.py
backend/tests/scan/: test_graph.py  test_pfc_agents.py
components/: ChatInterfaceClient.tsx
frontend/: .cursorrules  .dockerignore  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  POSD.md  README.md  chat-interface.tsx  cypress.config.js  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  repomix-output.txt  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: chat-interface.tsx  globals.css  head.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: AgentBarChart.tsx  AgentForceGraph.tsx  AgentHeatmap.tsx  AgentPolarChart.tsx  (+24 more)
(+128 files in other folders)
