[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
description = "SCAN backend"
authors = [
  { name = "Paul Sanders", email = "paul@paulsanders.dev" }
]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "asyncpg==0.30.0",
    "camel-converter[pydantic]==4.0.1",
    "fastapi==0.115.8",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "langchain==0.3.19",
    "langchain-openai==0.3.6",
    "langgraph==0.2.74",
    "loguru==0.7.3",
    "orjson==3.10.15",
    "pwdlib[argon2]==0.2.1",
    "pydantic[email]==2.10.6",
    "pydantic-settings==2.8.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "valkey==6.1.0",
]

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.13.0",
  "pre-commit==4.0.1",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "ruff==0.7.3",
]

[tool.hatch.version]
path = "app/_version.py"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=app --cov-report term-missing --no-cov-on-fail"
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # print found
  "T203",  # pprint found
  "ASYNC",  # flake8-async

]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
